--- a/Exercise 1/index.html
+++ b/Exercise 1/index.html
@@ -2,9 +2,9 @@
 
 <div id="exercise">
    <!-- 1) Fill the <p> below with your Name and Age - using Interpolation -->
-    <p>VueJS is pretty cool - {{this.name}} ({{this.age}})</p>
+    <p>VueJS is pretty cool - {{name}} ({{age}})</p>
     <!-- 2) Output your age, multiplied by 3 -->
-    <p>{{this.age*3}}</p>
+    <p>{{age*3}}</p>
     <!-- 3) Call a function to output a random float between 0 and 1 (Math.random()) -->
     <p>{{generateRandomNo()}}</p>
     <!-- 4) Search any image on Google and output it here by binding the "src" attribute -->
